# slashbitbot

./: .gitignore  CMakeLists.txt  README.rst  prj.conf  pyproject.toml  slashbitbot.yaml
boards/: bbc_microbit_v2.overlay
boards/shields/kitronik_crb_5693/: Kconfig.defconfig  Kconfig.shield  kitronik_crb_5693.overlay
boards/shields/kitronik_crb_5693/boards/: bbc_microbit.overlay  bbc_microbit_v2.overlay
boards/shields/kitronik_crb_5693/dts/bindings/: pwm-motors.yaml  pwm-servos.yaml
motors/: pwm_nonlinearity.ods
src/: display.cpp  display.h  errors.h  functions.h  geometry.h  main.c  main.cpp  motion.cpp  motion.h  motors.cpp  motors.h  sensors.cpp  sensors.h  storage.cpp  storage.h
