[tool.poetry]
name = "slashbitbot"
version = "0.0.1"
description = "Balancing Robot"
authors = [
  "Jaap Versteegh <j.r.versteegh@gmail.com>",
]
readme = "README.rst"
packages = [
  { include  = "simulation", from = "src" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering"
]
keywords = [
  "robot",
  "microbit",
  "zephyr"
]


[tool.poetry.dependencies]
# python <3.12 to remain compatible with scipy requirements
python = ">=3.10, <3.13"

[tool.poetry.group.dev.dependencies]


[tool.black]
extend_exclude = ''

[tool.isort]
profile = "black"
known_first_party = ["simulation"]
skip = ["__init__.py"]
extend_skip_glob = ["venv", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """\
    --cov-report=term-missing:skip-covered \
    --cov-report=html \
    --cov-report=xml \
    """
filterwarnings = "ignore::DeprecationWarning"

[tool.coverage]
run = { source = ["simulation"], branch = true }
html = { directory = "build/pytest_coverage" }
xml = { output = "build/pytest_coverage.xml" }

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel", "cmake", "tomli"]
build-backend = "poetry.core.masonry.api"
